# Meta-Vision

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  jetson.yml  jetson_test.yml  main.cpp  meta.yml  myHeader.hpp  readme.txt  robomaster_meta.yaml  run.sh
calibration/640x320-330fps/: calibdata.txt  caliberation_result.txt
calibration/iPhoneXS-1440p/: calibdata.txt  caliberation_result.txt
lib/MJPEGWriter/: MJPEGWriter.cpp  MJPEGWriter.h
rm2018_xidian_armor/: angle_solver.hpp  armor_recorder.cpp  camera_info.hpp  interface.cpp
rm2018_xidian_armor/calibration-param/: 480P_120_7.xml  640x360-330fps.xml
robomasters_base-master/: opticalFlow.h
src/: entrypoint.cpp  entrypoint.hpp  global.hpp  main.cpp  main.hpp
src/algo/: armor_recorder.cpp  armor_recorder.hpp  interface.cpp  interface.hpp
src/algo/Armor/: SVM.xml  SVM2.xml
src/algo/Driver/: RMVideoCapture.cpp  RMVideoCapture.hpp
src/algo/Pose/: angle_solver_params.xml
src/algo/calibration-param/: 640x360-330fps.xml
src/algo/icra2018_njust_armor/: armor_detector.cpp  armor_detector.hpp  interface.cpp  interface.hpp  myHeader.hpp  settings.cpp  settings.hpp
src/algo/icra2018_njust_armor/template/: param_config.xml
src/algo/rm2018_xidian_armor/: angle_slover.cpp  angle_solver.cpp  armor_detect.cpp  armor_detect.hpp  armor_info.cpp  armor_info.hpp  armor_param.hpp  armor_recorder.cpp  armor_recorder.hpp  camera_info.cpp  interface.cpp  interface.hpp  settings.cpp  settings.hpp
src/algo/rm2018_xidian_armor/calibration-param/: 480P_120_MH.xml  480P_120_RH.xml  640x360-330fps.xml  iPhoneXS-1920P.xml
src/interfaces/: multithread.hpp  video_source.hpp  video_target.hpp  vision_port.cpp  vision_port.h
src/logging/: colortext.hpp  logging.cpp  logging.hpp  timing.cpp  timing.hpp
src/serial/: protocol.cpp  protocol.hpp  rm_protocol.cpp  rm_protocol.hpp  serial.hpp  serial.proto  status.cpp  status.hpp
src/video_sources/: camera.cpp  camera.hpp  file.cpp  file.hpp
src/video_targets/: dummy.cpp  dummy.hpp  file.cpp  file.hpp  webserver.cpp  webserver.hpp
utilities/armor_sample/: armor_param.cpp  armor_param.h  armor_params.xml  armor_sample.cpp  armor_sample.hpp  colortext.hpp  config.hpp  detect.cpp  detect.hpp  generate.sh  info.cpp  info.h  logging.hpp  main.cpp  readme.md
utilities/camera/: PrtSc.cpp
utilities/camera_calibration/: camera_calibration.cpp
utilities/camera_snapshot/: camera_snapshot.cpp
utilities/train/: main.cpp
